Walter White sold memes instead of meth
